src/test/rustdoc-ui/test-compile-fail3.stderr
error: unterminated double quote string
 --> $DIR/test-compile-fail3.rs:3:1
  |
3 | "fail
  | ^^^^^^

error: aborting due to previous error

